src/test/ui/resolve/token-error-correct.stderr
error: incorrect close delimiter: `}`
  --> $DIR/token-error-correct.rs:16:1
   |
LL | }
   | ^
   |
note: unclosed delimiter
  --> $DIR/token-error-correct.rs:14:12
   |
LL |     foo(bar(;
   |            ^

error: incorrect close delimiter: `}`
  --> $DIR/token-error-correct.rs:16:1
   |
LL | }
   | ^
   |
note: unclosed delimiter
  --> $DIR/token-error-correct.rs:14:8
   |
LL |     foo(bar(;
   |        ^

error: expected expression, found `;`
  --> $DIR/token-error-correct.rs:14:13
   |
LL |     foo(bar(;
   |             ^ expected expression

error: aborting due to 3 previous errors

